# id_create

./: build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml
id_create/: asgi.py  db.sqlite3  pyproject.toml  render.yaml  settings.py  urls.py
id_create/id_create/: settings.py  urls.py  wsgi.py
main/: draft1.py  views.py
