[tool.poetry]
name = "id-create"
version = "0.1.0"
description = ""
authors = ["etimbuk9 <etimbuk9@yahoo.co.uk>"]
readme = "README.md"
packages = [{include = "id_create"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
